--- a/index.html
+++ b/index.html
@@ -23,13 +23,14 @@
 </head>
 <body>
 
-	<div class="bg-contact3" style="background-image: url('images/bg-01.jpg');">
+<div class="bg-contact3" style="background-image: url('images/bg-01.jpg');">
+<div class="row container-bg-contact3">
+	<div class="col-md-8">
+		<div class="row">
+		<div class="col-md-6">
 		<div class="container-contact3">
 			<div class="wrap-contact3">
 				<form class="contact3-form validate-form">
-					<span class="contact3-form-title">
-						Signature
-					</span>
 					<span class="contact3-form-title">
 						<h4>Your details</h4>
 					</span>
@@ -62,12 +63,14 @@
 						<input class="input3" type="text" name="phone" placeholder="Phone">
 						<span class="focus-input3"></span>
 					</div>
-
-					<div class="wrap-input3 validate-input" data-validate = "Message is required">
-						<textarea class="input3" name="message" placeholder="Your Message"></textarea>
-						<span class="focus-input3"></span>
-					</div>
-
+				</form>
+			</div>
+		</div>
+	</div>
+	<div class="col-md-6">
+		<div class="container-contact3">
+			<div class="wrap-contact3">
+				<form class="contact3-form validate-form">
 					<span class="contact3-form-title">
 						<h4>Address</h4>
 					</span>
@@ -101,16 +104,103 @@
 						<input class="input3" type="text" name="country" placeholder="Country" value="Spain">
 						<span class="focus-input3"></span>
 					</div>
-
-					<div class="container-contact3-form-btn">
-						<button class="contact3-form-btn">
-							Create
-						</button>
-					</div>
 				</form>
 			</div>
 		</div>
 	</div>
+</div>
+	</div>
+
+	<div class="col-md-4 container-contact3">
+		<div class="card">
+			<div class="card-body">
+				<table width="400" cellspacing="0" cellpadding="0" border="0">
+				   <tr>
+				      <td style="text-align:left;padding-bottom:10px">
+				        <a href="http://www.irblleida.org/"><img style="border:none" src="https://s1g.s3.amazonaws.com/b0477dfde654c467520c184ea260c070.jpg"></a>
+				      </td>
+				    </tr>
+				    <tr>
+				      <td style="border-top:solid #6c1d41 2px" height="12"></td>
+				    </tr>
+				    <tr>
+				      <td style="vertical-align: top; text-align:left;color:#000000;font-size:12px;font-family:helvetica, arial;; text-align:left">
+				        <span style="margin-right:5px;color:#000000;font-size:14px;font-family:helvetica, arial">Jordi Vilaplana, Ph. D.</span>
+				        <span style="margin-right:5px;color:#000000;font-size:12px;font-family:helvetica, arial">Computer Science Researcher</span>
+				        <br>
+				        <span style="margin-right:5px;color:#000000;font-size:12px;font-family:helvetica, arial">Biostatistics Unit</span>
+				        <br>
+				        <table cellspacing="0" cellpadding="0" border="0" style="margin:0 5px 5px 0;display:inline">
+				          <tr>
+				            <td style="padding-right:5px">
+				              <img width="40" height="40" src="https://s1g.s3.amazonaws.com/04c21d7be2ceb2a84d2fd0cd2aeb27cb.png" alt="email" style="border:none">
+				            </td>
+				            <td>
+				              <span style="font:12px helvetica, arial"><a href="mailto:jvilaplana@irblleida.cat" style="color:#3388cc;text-decoration:none">jvilaplana@irblleida.cat</a></span>
+				            </td>
+				          </tr>
+				          </table>
+				          <table cellspacing="0" cellpadding="0" border="0" style="margin:0 5px 5px 0;display:inline">
+				            <tr>
+				              <td style="padding-right:5px">
+				                <img width="40" height="40" src="https://s1g.s3.amazonaws.com/cfe2f2303daeca186f7372018ac2f0c4.png" alt="office" style="border:none">
+				              </td>
+				              <td>
+				                <span style="font:12px helvetica, arial">
+				                  <a href="tel:+34 973 00 36 69" style="color:#3388cc;text-decoration:none">+34973003669</a>
+				                </span>
+				              </td>
+				            </tr>
+				          </table>
+				          <br>
+				          <br>
+				          <span style="margin-right:5px;color:#000000;font-size:12px;font-family:helvetica, arial">Institut de Recerca Biom&#xE8;dica de Lleida (IRBLleida)</span>
+				          Av. Alcalde Rovira Roure, 80, Despatx 4.3, Lleida, 25198, Spain
+				          <br>
+				          <br>
+				          <table cellpadding="0" cellpadding="0" border="0"><tr><td style="padding-right:5px">
+				            <a href="https://facebook.com/IRBLleida" style="display: inline-block">
+				              <img width="40" height="40" src="https://s1g.s3.amazonaws.com/f54e4739ce3f4ad84ae30ba6db56e907.png" alt="Facebook" style="border:none">
+				            </a>
+				          </td>
+				          <td style="padding-right:5px">
+				            <a href="https://twitter.com/IRBLleida_Info" style="display: inline-block">
+				              <img width="40" height="40" src="https://s1g.s3.amazonaws.com/b64546c018204dc0c755767d3d07b8fe.png" alt="Twitter" style="border:none">
+				            </a>
+				          </td>
+				          <td style="padding-right:5px">
+				            <a href="https://youtube.com/channel/UCehZssKWqMg_oDqj8RYUvhw" style="display: inline-block">
+				              <img width="40" height="40" src="https://s1g.s3.amazonaws.com/b2d0639d26bc9f8e372e8b9c515aebcf.png" alt="YouTube" style="border:none">
+				            </a>
+				          </td>
+				        </tr>
+				      </table>
+				      <a href="http://www.irblleida.org/" style="text-decoration:none;color:#3388cc">www.irblleida.org/</a>
+				    </td>
+				  </tr>
+				 </table>
+				 <table width="400" cellspacing="0" cellpadding="0" border="0" style="margin-top:10px">
+				   <tr>
+				     <td style="text-align:left;color:#aaaaaa;font-size:10px;font-family:helvetica, arial">
+				       <p>This message may contain private or confidential information, and is&nbsp;addressed&nbsp;exclusively to its intended recipient. If you have received it&nbsp;in error, please notify&nbsp;the sender and delete it. Please bear in mind that&nbsp;you are not authorized to use it&nbsp;for any purposes.</p>
+				     </td>
+				   </tr>
+				 </table>
+
+	  </div>
+		<div class="panel-footer">
+			<form class="contact3-form validate-form">
+				<div class="container-contact3-form-btn">
+					<button class="contact3-form-btn">
+						Download
+					</button>
+				</div>
+			</form>
+		</div>
+		</div>
+	</div>
+	</div>
+</div>
 
 
 	<div id="dropDownSelect1"></div>
