--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		<span class="contact-title">
 			IRBLleida Sigrnature generator
 			<div style="float: right; margin-right: 10px;">
-				<p> <a href="#" data-toggle="modal" data-target="#help">How to costumize the signature? </a></p>
+				<p> <a href="#" data-toggle="modal" data-target="#modal_help">How to costumize the signature? </a></p>
 			</div>
 		</span>
 
@@ -232,25 +232,24 @@
 		</div>
 	</div>
 	</div>
-</div>
+</div
 
 
 <!-- Modal -->
-<div class="modal fade" id="modal_help" tabindex="-1" role="dialog" aria-labelledby="help" aria-hidden="true">
+<div class="modal fade" id="modal_help" tabindex="-1" role="dialog" aria-labelledby="help-label" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="help">Modal title</h5>
+        <h5 class="modal-title" id="help-label">How to customize the signature?</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body">
-        ...
+        Coming soon...
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
       </div>
     </div>
   </div>
