--- a/index.html
+++ b/index.html
@@ -60,6 +60,11 @@
 						<span class="focus-input3"></span>
 					</div>
 
+					<div class="wrap-input3">
+						<textarea class="input3" type="text" id="other" placeholder="Other"></textarea>
+						<span class="focus-input3"></span>
+					</div>
+
 					<span class="contact3-form-title">
 						<h4>Contact details</h4>
 					</span>
@@ -155,10 +160,13 @@
 				    </tr>
 				    <tr>
 				      <td style="vertical-align: top; text-align:left;color:#000000;font-size:12px;font-family:helvetica, arial;; text-align:left">
-				        <span style="margin-right:5px;color:#000000;font-size:14px;font-family:helvetica, arial" id="sig-name"></span>
+				        <b><span style="margin-right:5px;color:#000000;font-size:14px;font-family:helvetica, arial" id="sig-name"></span></b>
+								<br>
 				        <span style="margin-right:5px;color:#000000;font-size:12px;font-family:helvetica, arial" id="sig-job"></span>
 				        <br>
 				        <span style="margin-right:5px;color:#000000;font-size:12px;font-family:helvetica, arial" id="sig-unit"></span>
+				        <br>
+								<span style="margin-right:5px;color:#000000;font-size:12px;font-family:helvetica, arial" id="sig-other"></span>
 				        <br>
 				        <table cellspacing="0" cellpadding="0" border="0" style="margin:0 5px 5px 0;display:inline">
 				          <tr>
@@ -204,6 +212,11 @@
 				              <img width="40" height="40" src="https://s1g.s3.amazonaws.com/b2d0639d26bc9f8e372e8b9c515aebcf.png" alt="YouTube" style="border:none">
 				            </a>
 				          </td>
+									<td style="padding-right:5px">
+										<a href="https://linkedin.com/company/1611059/" style="display: inline-block">
+											<img width="40" height="40" src="https://s1g.s3.amazonaws.com/b0387b2bb3d704883b4ed69c257a46b5.png" alt="LinkedIn" style="border:none">
+										</a>
+									</td>
 				        </tr>
 				      </table>
 				      <a href="http://www.irblleida.org/" style="text-decoration:none;color:#3388cc">www.irblleida.org/</a>
