--- a/index.html
+++ b/index.html
@@ -25,12 +25,9 @@
 
 <div class="bg-contact3" style="background-image: url('images/bg-01.jpg');">
 <div class="row container-bg-contact3">
-	<div class="col-md-12" style="margin-top: 20px">
+	<div class="col-md-12" style="margin-top: 10px">
 		<span class="contact-title">
 			IRBLleida Sigrnature generator
-			<div style="float: right; margin-right: 10px;">
-				<p> <a href="#" data-toggle="modal" data-target="#modal_help">How to costumize the signature? </a></p>
-			</div>
 		</span>
 
 
@@ -137,8 +134,6 @@
 				<div>
 					<p><u>To:</u> John</p>
 					<hr>
-					<p><u>From:</u> </p>
-					<hr>
 					<p><u>Subject:</u> This is my new IRBLleida email signature!</p>
 					<hr>
 				</div>
@@ -236,8 +231,8 @@
 		<div class="card-footer">
 			<form class="contact3-form validate-form">
 				<div class="container-contact3-form-btn">
-					<button class="btn btn-primary">
-						Download
+					<button id="generator" class="btn btn-primary">
+						Generate
 					</button>
 				</div>
 			</form>
@@ -250,7 +245,7 @@
 
 <!-- Modal -->
 <div class="modal fade" id="modal_help" tabindex="-1" role="dialog" aria-labelledby="help-label" aria-hidden="true">
-  <div class="modal-dialog" role="document">
+  <div class="modal-dialog modal-lg" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="help-label">How to customize the signature?</h5>
@@ -259,7 +254,85 @@
         </button>
       </div>
       <div class="modal-body">
-        Coming soon...
+
+				<div id="accordion">
+				  <div class="card">
+				    <div class="card-header" id="headingOne">
+				      <h5 class="mb-0">
+				        <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+				          For IRBLleida Webmail
+				        </button>
+				      </h5>
+				    </div>
+
+				    <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
+				      <div class="card-body">
+								<ul>
+									<li>1- Open <a href="http://mail.irblleida.cat">IRBLleida Webmail</a></li>
+									<li>2- Navigate to settings option (bottom left)</li>
+									<li>3- In "General" sheet, click to "+ Añadir firma"</li>
+									<li id="content-webmail">4- Select and copy the content below</li>
+									<li>5- Paste it to the text area and save the changes!</li>
+								</ul>
+				      </div>
+				    </div>
+				  </div>
+				  <div class="card">
+				    <div class="card-header" id="headingTwo">
+				      <h5 class="mb-0">
+				        <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+				          For Gmail
+				        </button>
+				      </h5>
+				    </div>
+				    <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
+				      <div class="card-body">
+								<ul>
+ 								 <li>1- Open <a href="https://gmail.com">Gmail</a></li>
+ 								 <li>2- Navigate to settings icon (top right) and then, settings option.</li>
+ 								 <li>3- In "General" sheet, go to signature section.</li>
+ 								 <li id="content-gmail">4- Select and copy the content below</li>
+ 								 <li>5- Paste it to the text area and save the changes!</li>
+ 							 </ul>
+				      </div>
+				    </div>
+				  </div>
+				  <div class="card">
+				    <div class="card-header" id="headingThree">
+				      <h5 class="mb-0">
+				        <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+				          For Thunderbird
+				        </button>
+				      </h5>
+				    </div>
+				    <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
+				      <div class="card-body">
+								<ul>
+ 								 <li>1- Open Thunderbird</li>
+ 								 <li>2- Click to your "irblleida" mail.</li>
+								 <li>3- Click to "Ver configuración de esta cuenta" (or alternatively, right click to your mail and in the settings option)</li>
+ 								 <li>4- In the main settings section, go to signature section and choose the "attach file (text, html or image)" option.</li>
+ 								 <li>5- Download <a href="#" onclick="downloadHTML();">here</a> the HTML file.</li>
+ 								 <li>6- Choose the file and save the changes.</li>
+ 							 </ul>
+				      </div>
+				    </div>
+				  </div>
+					<div class="card">
+				    <div class="card-header" id="headingFour">
+				      <h5 class="mb-0">
+				        <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+				          Other
+				        </button>
+				      </h5>
+				    </div>
+				    <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordion">
+				      <div class="card-body">
+				        Contact to <a href="mailto:jvilaplana@irblleida.cat">jvilaplana@irblleida.cat</a> or <a href="mailto:pbalaguer@irblleida.cat">pbalaguer@irblleida.cat</a> for more information.
+				      </div>
+				    </div>
+				  </div>
+				</div>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
