--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
 				   <tr>
 				     <td style="text-align:left;color:#aaaaaa;font-size:10px;font-family:helvetica, arial">
 				       <p>This message may contain private or confidential information, and is&nbsp;addressed&nbsp;exclusively to its intended recipient. If you have received it&nbsp;in error, please notify&nbsp;the sender and delete it. Please bear in mind that&nbsp;you are not authorized to use it&nbsp;for any purposes.</p>
-							 <p>More information <a href="http://administraciojusticia.gencat.cat/web/.content/documents/arxius/lo15_1999lopdcp.pdf">here</a>.
+							 <p>More information <a href="http://irblleida.github.io/mail-signature/lopd.html">here</a>.</p>
 				     </td>
 				   </tr>
 				 </table>
