CREBA Users template

--- a/index.html
+++ b/index.html
@@ -26,11 +26,12 @@
 <div class="bg-contact3" style="background-image: url('images/bg-01.jpg');">
 <div class="row container-bg-contact3">
 	<div class="col-md-12" style="margin-top: 10px">
+		<div style="float:right; margin-right: 10px;">
+			<a href="creba.html">CREBA Users</a>
+		</div>
 		<span class="contact-title">
 			IRBLleida Signature Generator
 		</span>
-
-
 	</div>
 	<div class="col-md-6">
 		<div class="row">
