CREBA Logo width changed

--- a/creba.html
+++ b/creba.html
@@ -148,7 +148,7 @@
 				<table cellspacing="0" cellpadding="0" border="0">
 				   <tr>
 				      <td style="text-align:left;padding-bottom:10px">
-				        <a href="http://www.creballeida.org/"><img style="border:none" src="https://www.dropbox.com/s/jl9pogb8k6k5okk/CREBAIRBLleida.png?raw=1"></a>
+				        <a href="http://www.creballeida.org/"><img style="border:none" width="65%" src="https://www.dropbox.com/s/jl9pogb8k6k5okk/CREBAIRBLleida.png?raw=1"></a>
 				      </td>
 				    </tr>
 				    <tr>
