Deleting some inputs on CREBA generator

--- a/creba.html
+++ b/creba.html
@@ -53,16 +53,6 @@
 						<span class="focus-input3"></span>
 					</div>
 
-					<div class="wrap-input3">
-						<input class="input3" type="text" id="unit" placeholder="Unit / Department">
-						<span class="focus-input3"></span>
-					</div>
-
-					<div class="wrap-input3">
-						<textarea class="input3" type="text" id="other" placeholder="Other"></textarea>
-						<span class="focus-input3"></span>
-					</div>
-
 					<span class="contact3-form-title">
 						<h4>Contact details</h4>
 					</span>
@@ -95,11 +85,6 @@
 
 					<div class="wrap-input3">
 						<input class="input3 has-val" type="text" id="addr1" placeholder="Address line" value="Carrer de Balaguer, 33">
-						<span class="focus-input3"></span>
-					</div>
-
-					<div class="wrap-input3">
-						<input class="input3" type="text" id="addr2" placeholder="Office number">
 						<span class="focus-input3"></span>
 					</div>
 
@@ -160,10 +145,6 @@
 								<br>
 				        <span style="margin-right:5px;color:#000000;font-size:12px;font-family:helvetica, arial" id="sig-job"></span>
 				        <br>
-				        <span style="margin-right:5px;color:#000000;font-size:12px;font-family:helvetica, arial" id="sig-unit"></span>
-				        <br>
-								<span style="margin-right:5px;color:#000000;font-size:12px;font-family:helvetica, arial" id="sig-other"></span>
-				        <br>
 				        <table cellspacing="0" cellpadding="0" border="0" style="margin:0 5px 5px 0;display:inline">
 				          <tr>
 				            <td style="padding-right:5px">
@@ -190,7 +171,7 @@
 				          <br>
 				          <span style="margin-right:5px;color:#000000;font-size:12px;font-family:helvetica, arial" id="sig-org">Ci&#xE8;ncia i Recerca Experimental Biomèdica Aplicada (CREBA)</span>
 									<br/>
-									<span id="sig-addr1"> Carrer de Balaguer, 33</span><span id="sig-addr2"></span><span id="sig-city">, Torrelameu</span><span id="sig-postcode">, 25138</span><span id="sig-country">, Spain</span>
+									<span id="sig-addr1"> Carrer de Balaguer, 33</span><span id="sig-city">, Torrelameu</span><span id="sig-postcode">, 25138</span><span id="sig-country">, Spain</span>
 				          <br>
 				          <br>
 				          <table cellpadding="0" cellpadding="0" border="0"><tr><td style="padding-right:5px">
