Image URLs changed. Logo size changed

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 				<table cellspacing="0" cellpadding="0" border="0">
 				   <tr>
 				      <td style="text-align:left;padding-bottom:10px">
-				        <a href="http://www.irblleida.org/"><img style="border:none" src="https://s1g.s3.amazonaws.com/b0477dfde654c467520c184ea260c070.jpg"></a>
+				        <a href="http://www.irblleida.org/"><img style="border:none" height="75%" src="https://irblleida.github.io/mail-signature/images/irblleida.png"></a>
 				      </td>
 				    </tr>
 				    <tr>
@@ -167,7 +167,7 @@
 				        <table cellspacing="0" cellpadding="0" border="0" style="margin:0 5px 5px 0;display:inline">
 				          <tr>
 				            <td style="padding-right:5px">
-				              <img width="40" height="40" src="https://s1g.s3.amazonaws.com/04c21d7be2ceb2a84d2fd0cd2aeb27cb.png" alt="email" style="border:none">
+				              <img width="40" height="40" src="https://irblleida.github.io/mail-signature/images/mail.png" alt="email" style="border:none">
 				            </td>
 				            <td>
 				              <span style="font:12px helvetica, arial"><a id="sig-email" href="" style="color:#3388cc;text-decoration:none"></a></span>
@@ -177,7 +177,7 @@
 				          <table cellspacing="0" cellpadding="0" border="0" style="margin:0 5px 5px 0;display:inline">
 				            <tr>
 				              <td style="padding-right:5px">
-				                <img width="40" height="40" src="https://s1g.s3.amazonaws.com/cfe2f2303daeca186f7372018ac2f0c4.png" alt="office" style="border:none">
+				                <img width="40" height="40" src="https://irblleida.github.io/mail-signature/images/phone.png" alt="office" style="border:none">
 				              </td>
 				              <td>
 				                <span style="font:12px helvetica, arial">
@@ -195,22 +195,22 @@
 				          <br>
 				          <table cellpadding="0" cellpadding="0" border="0"><tr><td style="padding-right:5px">
 				            <a href="https://facebook.com/IRBLleida" style="display: inline-block">
-				              <img width="40" height="40" src="https://s1g.s3.amazonaws.com/f54e4739ce3f4ad84ae30ba6db56e907.png" alt="Facebook" style="border:none">
+				              <img width="40" height="40" src="https://irblleida.github.io/mail-signature/images/facebook.png" alt="Facebook" style="border:none">
 				            </a>
 				          </td>
 				          <td style="padding-right:5px">
 				            <a href="https://twitter.com/IRBLleida_Info" style="display: inline-block">
-				              <img width="40" height="40" src="https://s1g.s3.amazonaws.com/b64546c018204dc0c755767d3d07b8fe.png" alt="Twitter" style="border:none">
+				              <img width="40" height="40" src="https://irblleida.github.io/mail-signature/images/twitter.png" alt="Twitter" style="border:none">
 				            </a>
 				          </td>
 				          <td style="padding-right:5px">
 				            <a href="https://youtube.com/channel/UCehZssKWqMg_oDqj8RYUvhw" style="display: inline-block">
-				              <img width="40" height="40" src="https://s1g.s3.amazonaws.com/b2d0639d26bc9f8e372e8b9c515aebcf.png" alt="YouTube" style="border:none">
+				              <img width="40" height="40" src="https://irblleida.github.io/mail-signature/images/youtube.png" alt="YouTube" style="border:none">
 				            </a>
 				          </td>
 									<td style="padding-right:5px">
 										<a href="https://linkedin.com/company/1611059/" style="display: inline-block">
-											<img width="40" height="40" src="https://s1g.s3.amazonaws.com/b0387b2bb3d704883b4ed69c257a46b5.png" alt="LinkedIn" style="border:none">
+											<img width="40" height="40" src="https://irblleida.github.io/mail-signature/images/linkedin.png" alt="LinkedIn" style="border:none">
 										</a>
 									</td>
 				        </tr>
