--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
 <div class="row container-bg-contact3">
 	<div class="col-md-12" style="margin-top: 10px">
 		<div style="float:right; margin-right: 10px;">
+			<a href="ubiostat.html">UBiostat Users</a>
+		</div>
+		<div style="float:right; margin-right: 10px;">
 			<a href="creba.html">CREBA Users</a>
 		</div>
 		<span class="contact-title">
