--- a/index.html
+++ b/index.html
@@ -273,11 +273,12 @@
 				    <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
 				      <div class="card-body">
 								<ul>
-									<li>1- Open <a href="http://mail.irblleida.cat">IRBLleida Webmail</a></li>
-									<li>2- Navigate to settings option (bottom left)</li>
-									<li>3- In "General" sheet, click to "+ Añadir firma"</li>
+									<li>1- Open <a href="https://outlook.office.com/mail/">IRBLleida Webmail</a></li>
+									<li>2- Navigate to settings option (upper right)</li>
+									<li>3- Search for "Firma de correo electrónico" sheet</li>
 									<li id="content-webmail">4- Select and copy the content below</li>
-									<li>5- Paste it to the text area and save the changes!</li>
+									<li>5- Paste it to the text area.</li>
+									<li>6- Mark "Incluir mi firma automáticamente", and save the changes!</li>
 								</ul>
 				      </div>
 				    </div>
