--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
 				    <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
 				      <div class="card-body">
 								<ul>
-									<li>1- Open <a href="https://outlook.office.com/mail/">IRBLleida Webmail</a></li>
+									<li>1- Open <a href="https://outlook.office.com/mail/" target="_blank">IRBLleida Webmail</a></li>
 									<li>2- Navigate to settings option (upper right)</li>
 									<li>3- Search for "Firma de correo electrónico" sheet</li>
 									<li id="content-webmail">4- Select and copy the content below</li>
