--- a/ubiostat.html
+++ b/ubiostat.html
@@ -236,7 +236,8 @@
 					 <table cellspacing="0" cellpadding="0" border="0" style="margin-top:10px;">
 					   <tbody><tr>
 					     <td style="text-align:left;color:#aaaaaa;font-size:8px;font-family:helvetica, arial">
-					       <p>&nbsp;</p>
+					       <p>This message may contain private or confidential information, and is&nbsp;addressed&nbsp;exclusively to its intended recipient. If you have received it&nbsp;in error, please notify&nbsp;the sender and delete it. Please bear in mind that&nbsp;you are not authorized to use it&nbsp;for any purposes.</p>						       <p>&nbsp;</p>
+								 <p>More information <a href="https://irblleida.github.io/mail-signature/lopd.html">here</a>.</p>
 					     </td>
 					   </tr>
 					 </tbody>
