--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 				<table cellspacing="0" cellpadding="0" border="0">
 				   <tr>
 				      <td style="text-align:left;padding-bottom:10px">
-				        <a href="http://www.irblleida.org/"><img style="border:none" height="75%" src="https://irblleida.github.io/mail-signature/images/irblleida.png"></a>
+				        <a href="http://www.irblleida.org/"><img style="border:none" height="75%" src="https://irblleida.github.io/mail-signature/images/irblleida.jpeg"></a>
 				      </td>
 				    </tr>
 				    <tr>
