--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
 		<div style="float:right; margin-right: 10px;">
 			<a href="creba.html">CREBA Users</a>
 		</div>
+		<div style="float:right; margin-right: 10px;">
+			<a href="irbudl.html">IRB+UdL Users</a>
+		</div>
 		<span class="contact-title">
 			IRBLleida Signature Generator
 		</span>
