--- a/creba.html
+++ b/creba.html
@@ -79,7 +79,7 @@
 					</span>
 
 					<div class="wrap-input3">
-						<input class="input3 has-val" type="text" id="org" placeholder="Organization" value="Ciència i Recerca Experimental Biomèdica Aplicada (CREBA)">
+						<input class="input3 has-val" type="text" id="org" placeholder="Organization" value="Centre de Recerca Experimental Biomèdica Aplicada (CREBA)">
 						<span class="focus-input3"></span>
 					</div>
 
@@ -169,7 +169,7 @@
 				          </table>
 				          <br>
 				          <br>
-				          <span style="margin-right:5px;color:#000000;font-size:12px;font-family:helvetica, arial" id="sig-org">Ci&#xE8;ncia i Recerca Experimental Biomèdica Aplicada (CREBA)</span>
+				          <span style="margin-right:5px;color:#000000;font-size:12px;font-family:helvetica, arial" id="sig-org">Centre de Recerca Experimental Biom&#xE8;dica Aplicada (CREBA)</span>
 									<br/>
 									<span id="sig-addr1"> Carrer de Balaguer, 33</span><span id="sig-city">, Torrelameu</span><span id="sig-postcode">, 25138</span><span id="sig-country">, Spain</span>
 				          <br>
