--- a/index.html
+++ b/index.html
@@ -49,6 +49,11 @@
 					<span class="contact3-form-title">
 						<h4>Your details</h4>
 					</span>
+					
+					<div class="wrap-input3">
+						<input class="input3" type="text" id="pronouns" placeholder="Pronouns">
+						<span class="focus-input3"></span>
+					</div>
 
 					<div class="wrap-input3 validate-input" data-validate="Name is required">
 						<input class="input3" type="text" id="name" placeholder="Name">
@@ -164,6 +169,7 @@
 				    <tr>
 				      <td style="vertical-align: top; text-align:left;color:#000000;font-size:12px;font-family:helvetica, arial;; text-align:left">
 				        <b><span style="margin-right:5px;color:#000000;font-size:14px;font-family:helvetica, arial" id="sig-name"></span></b>
+					      <span style="margin-right:5px;color:#000000;font-size:14px;font-family:helvetica, arial" id="sig-pronouns"></span>
 								<br>
 				        <span style="margin-right:5px;color:#000000;font-size:12px;font-family:helvetica, arial" id="sig-job"></span>
 				        <br>
