--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 					</span>
 					
 					<div class="wrap-input3">
-						<input class="input3" type="text" id="pronouns" placeholder="Pronouns">
+						<input class="input3" type="text" id="pronouns" placeholder="Pronouns (combine at will: he, she, her, his)">
 						<span class="focus-input3"></span>
 					</div>
 
@@ -168,9 +168,8 @@
 				    </tr>
 				    <tr>
 				      <td style="vertical-align: top; text-align:left;color:#000000;font-size:12px;font-family:helvetica, arial;; text-align:left">
-				        <b><span style="margin-right:5px;color:#000000;font-size:14px;font-family:helvetica, arial" id="sig-name"></span></b>
-				      	<br>
-					<span style="margin-right:5px;color:#000000;font-size:14px;font-family:helvetica, arial" id="sig-pronouns"></span>
+				        <b><span style="margin-right:5px;color:#000000;font-size:8px;font-family:helvetica, arial" id="sig-pronouns"></span> <span style="margin-right:5px;color:#000000;font-size:14px;font-family:helvetica, arial" id="sig-name"></span></b>
+					
 					<br>
 				        <span style="margin-right:5px;color:#000000;font-size:12px;font-family:helvetica, arial" id="sig-job"></span>
 				        <br>
