--- a/index.html
+++ b/index.html
@@ -51,9 +51,10 @@
 					</span>
 					
 					<div class="wrap-input3">
-						<input class="input3" type="text" id="pronouns" placeholder="Pronouns (combine at will: he, she, her, his)">
+						<input class="input3" type="text" id="pronouns" placeholder="Pronouns (*)">
 						<span class="focus-input3"></span>
 					</div>
+					<div><span style="font-size:8px;">* (combine at will: he, she, her, his)</span></div>
 
 					<div class="wrap-input3 validate-input" data-validate="Name is required">
 						<input class="input3" type="text" id="name" placeholder="Name">
