--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 						<input class="input3" type="text" id="pronouns" placeholder="Pronouns (*)">
 						<span class="focus-input3"></span>
 					</div>
-					<div><span style="font-size:8px;">* (combine at will: he, she, her, his)</span></div>
+					<div><span style="color:white;font-size:10px;">* (combine at will: he, she, her, his)</span></div>
 
 					<div class="wrap-input3 validate-input" data-validate="Name is required">
 						<input class="input3" type="text" id="name" placeholder="Name">
